Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -167,7 +167,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \item \textit{Then, in paragraph 1.3, the complexity of systems with respect to segregation is also problematically described.} \ldots
   % Emergent behaviour that may lead to segregation is first and foremost a social process, taking social interactions at the local scale (income, housing costs, etc.) and/or at the macro scale (laws, rules, economic system, cultural attitudes, etc.) into account. These interactions can then be associated with the material and relational dimension of geographical spaces. The question remains: what is the role of geographical systems? In this respect, the paper offers some relevant clues such as the MAUP problem or the “uncertain geographic context problem”. 
   
-  $\rightarrow$ see comment A. cite Banos, 2012 \comment[FL]{quel était le point exactement avec Banos?}
+  $\rightarrow$ see comment A. As for the role of geometric structures in the production of segregation, Banos (2012) has shown that with the same Schelling mechanisms and the same parameter values but different network structures of neighbourhoods (scale-free, regular, etC.) the segregation observed at the end of simulation varied significantly between network structures. This is the kind of approach we systematise here, although with a spatial grid instead of network structures.
 
   \medskip
 
@@ -248,7 +248,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
   \item \textit{Furthermore, there are now examples of spatial models that go beyond administrative neighborhoods and overimposed spatial boundaries, i.e., egohoods (e.g., https://onlinelibrary.wiley.com/doi/abs/10.1111/1745-9125.12006), which could be interesting to see implemented in ABM.}
   
-  $\rightarrow$ We added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation.
+  $\rightarrow$ We added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation. Indeed, at present, the use of a grid of varying density means that in dense areas, agents have many neighbours and thus a higher probability of mixing, which affects segregation measurement. With egohoods, each agents would have the same number of neighbours taken into account for the calcultation, but their spatial scope would vary (for some agents, it would be for example 100 neighbours from the same cell whereas for others, it would be the nearest 100 neighbours taken from 25 surrounding cells).
   
   \medskip
   
