--- a/paper.tex
+++ b/paper.tex
@@ -39,7 +39,7 @@
 \affil[5]{UMR CNRS 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
 
 \author[6]{Florent Le N{\' e}chet}
-\affil[6]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilit{\'e} Transport, Marne-la-Vallée, France}
+\affil[6]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilit{\'e} Transport, UMR-T 9403, Université Paris-Est Marne-la-Vallée, France}
 
 \author[1]{Romain Reuillon}
 \affil[1]{UPS CNRS 3611 ISC-PIF, Paris, France}
@@ -131,6 +131,7 @@
 
 
 \begin{abstract}
+\comment[FL]{le titre de l'article ce serait presque "geometry" matters? non?}
 Although simulation models of socio-spatial systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in socio-spatial models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic geometric structures generator in order to create density grids with which socio-spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. We wish to illustrate the potential interest of adding spatial sensitivity analysis during the exploration of models for both modellers and thematic specialists.%Furthermore, this effect is sometimes larger than the effect of parameters' value change.%Comment FL : j'ai supprimé cette dernière phrase qui ne me semblait pas essentielle et rajouté à la place une phrase d'ouverture de Marion.
 \end{abstract}
 
@@ -161,7 +162,7 @@ Space, Initial conditions, Sensitivity, Agent-Based Models
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%
 
-Computer simulation has been recognised and is increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}. It has been identified as an emerging field and coined under the term geosimulation by \cite{benenson2004geosimulation}. Simulation also appears as a way to overcome the difficult analytic resolution of many socio-spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social science models is that space and spatial interactions are given a prime role, geographers being driven by an explicit interest in studying the way "space" in broad sense influences the outcomes of social processes modelled. We think that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions, provided that models include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of the model outputs to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. \comment[FL]{il faut ici citer des approches du même type}. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
+Computer simulation has been recognised and is increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}. It has been identified as an emerging field and coined under the term geosimulation by \cite{benenson2004geosimulation}. Simulation also appears as a way to overcome the difficult analytic resolution of many socio-spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social science models is that space and spatial interactions are given a prime role, geographers being driven by an explicit interest in studying the way "space" in broad sense, and more specifically geometry or topology of space influences the outcomes of social processes modelled. We think that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions, provided that models include relevant spatial descriptions and behavioural rules which take spatial proximity into account, and provided that the model evaluation includes a sensitivity analysis of the model outputs to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. Various contribution have been made on ad hoc models to test for the influence of geometry on simulation outputs \citep{lilburne2009sensitivity, sun2007traffic}, but without providing a generic framework fitted for most agent-based models. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
 
 \subsection{Definition of the problem}
 %change1 : within a limited portion of space
@@ -172,7 +173,7 @@ Socio-spatial systems can be crudely described as social agents interacting with
 Self-organization has been shown to be a central feature of socio-spatial systems in general and of cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, batty2007cities}. Complexity is partially due to bifurcations, which are determinant in socio-spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as any other initial conditions, but of more interest to the geographer. \\
 
 
-Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) is far from isotropic, even in sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most socio-spatial models, especially cellular automata, still represent cities as uniform grids of isotropic density. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents tend to be approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of urban processes because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they might want to live in \citep{SpielmanHarrison2014}, or agents moving around will sense a different set of objects within the same fixed radius depending on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers represent initial space is therefore a central element of socio-spatial simulation models. However, this step is rarely explicit. A meaningful way of representing initial space might be to consider, not necessarily the peculiarities of every city, but at least their broad density structures so as to estimate the variability of the model behaviour to different plausible spatial arrangements.
+Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) is far from isotropic, even in sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most socio-spatial models, especially cellular automata, still represent cities as uniform grids of isotropic density. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents tend to be approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of urban processes because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they might want to live in \citep{SpielmanHarrison2014}, or agents moving around will sense a different set of objects within the same fixed radius depending on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers represent initial geometry of space is therefore a central element of socio-spatial simulation models. However, this step is rarely explicit. A meaningful way to address it might be to consider, not necessarily the peculiarities of every city, but at least their broad density structures so as to estimate the variability of the model behaviour to different plausible spatial arrangements.
 
 \subsection{Objective}
 
@@ -252,9 +253,9 @@ The density grid generator applies an urban morphogenesis model \citep{batty2007
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure: their concentration index, hierarchy index, centrality index and homogeneity index (cf. \cite{LeNechet2015}). These four dimensions were chosen as complementary descriptors of spatial organisation at urban or metropolitain level - see also \cite{tsai2005quantifying} and \cite{schwarz2010urban}. They account for : , the extend to which population is clustered in a central city, at macro scale (centrality) and micro scale (concentration), the extent to which density grid values are similar or contrasted, regardless of location, at macro scale (hierarchy) and micro scale (homogeneity)\comment[FL]{check with Juste quels indicateurs ont été utlisés}. These morphological dimensions are in practice captured using the rank-size slope to capture hierarchy, the average distance between individuals to capture concentration, distribution entropy to capture homogeneity, and Moran spatial autocorrelation index to measure centrality.
+In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure: their concentration index, hierarchy index, centrality index and homogeneity index (cf. \cite{LeNechet2015}). These four dimensions were chosen as complementary descriptors of spatial organisation at urban or metropolitain level - see also \cite{tsai2005quantifying} and \cite{schwarz2010urban}. They account for : the extend to which population is clustered in a central city, with two complementary indicators : Moran index (called "centrality") and distance between individuals ("concentration), the extent to which density grid values are similar or contrasted, regardless of location, with two complementary indicators : entropy of distribution ("homogeneity") and rank-size slope ("hierarchy").
 
-We sample the generator parameter space using a Latin Hypercube Sampling, which is a convenient technique to have a scatter with low discrepancy in high dimensions. We sample 2000 points in the 4-dimensional space of parameters {$\alpha$, $\beta$, $n_d$, $N$}. It yields a subset of 170 grids matching empirical densities, which constituted our set of different initial spatial conditions. These are further clustered into three classes of morphology (figure \ref{fig:densityTypes}): compact (e.g. Vienna), polycentric (Liege) and discontinuous (Augsburg). This clustering allows to evaluate the non-trivial effects of a meaningful urban form on simulation results. We select 15 grids of each type to work with in the computation of sensitivity analysis of an intra-urban model (cf. section \ref{sec:qualResults}).
+We sample the $\gamma$ parameter space using a Latin Hypercube Sampling, which is a convenient technique to have a scatter with low discrepancy in high dimensions. We sample 2000 points in the 4-dimensional space of parameters {$\alpha$, $\beta$, $n_d$, $N$}. It yields a subset of 170 grids matching empirical densities, which constituted our set of different initial spatial conditions. These are further clustered into three classes of morphology (figure \ref{fig:densityTypes}): compact (e.g. Vienna), polycentric (Liege) and discontinuous (Augsburg). This clustering allows to evaluate the non-trivial effects of a meaningful urban form on simulation results. We select 15 grids of each type to work with in the computation of sensitivity analysis of an intra-urban model (cf. section \ref{sec:qualResults}).
 \comment[FL]{à discuter}
 The spatial generator and its resulting grids are relevant to the case study models we have picked (Schelling and Sugarscape) because it produces density grids at a ``metropolitan scale'', which is the scale at which both model were initially intended to be. In the case of Schelling's segregation model for example, this scale is the one at which most empirical segregation indexes are computed and compared to the model outputs. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources \citep{batty2005agents}, or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density and that acknowledging this diversity might leads to a variation in the model outputs. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most unrealistic one, although unfortunately the most common one in Schelling implementations.
 
@@ -413,6 +414,9 @@ We now check the sensitivity in terms of qualitative behavior of phase diagrams.
 \end{figure}
 %%%%%%%%%%%%%
 
+\section{Conclusion}
+\comment[FL]{je déplace cette section, remettez là à la fin si vous pensez que c'était mieux}
+After reviewing the extensive literature on spatial biases in statistical and simulation models, we presented a method to analyse the sensitivity of a simulation's results to the initial spatial configuration. We did so by implementing a spatial generator whose output is used as input for the simulation model. We applied this approach to two textbook ABMs: Schelling and Sugarscape. With the Schelling experiment, we found that the different urban morphologies impact the interaction patterns, and that polycentric and discontinuous cities appear systematically more segregated than compact cities in terms of dissimilarity and entropy index. With Sugarscape, we show that the model is more sensitive to space than to its other parameters in the reference Netlogo implementation, both qualitatively and quantitatively: the amplitude of variations across density grids is larger than the amplitude in each phase diagram, and the behaviour of the phase diagram is qualitatively different in different regions of the morphological space. We think that this method has the potential to increase the arsenal of evaluation of socio-spatial models, in order to assess the sensitivity of models to their initial spatial conditions but also to learn about the impact of the urban form on social mechanisms.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \section{Discussion}
@@ -442,7 +446,11 @@ An aspect that we have not touched upon in the article with respect to the sensi
 \subsubsection{Reproducibility and Applicability} 
 
 
-Although the applications we present here are limited by the simplicity of the models, we think that the method could (and should) be applied to larger models including domain mechanisms and more empirical initialisation data, for example synthetic populations. The sensitivity analysis to initial spatial conditions could then be either a replication on the spatial allocation of the synthetic population, or a series of spatial permutations of the empirical spatial inputs.
+We wish to underline the interest of adding sensitivity analysis of the geometry of space during the exploration of models. As we have observed for simple agent-based models, uncertainties in the initial distribution of space on which agents will interact play a role on the variability in model outputs. This would certainly be even more important for more sophisticated model, with more type of agents and type of interactions, insomuch as agent-based model tend to be used in realistic, diverse settings. Therefore, we believe that for many applied problems, studying the specific variability of model outputs regarding the geometry of space would be important to assess the transferability of results in other urban settings.
+
+This is especially important in the context of the increasing recognition of the complexity of urban space and of the role cities plays in various aspects of sustainability : modelling cities with agent-based models might become more frequent \citep{perez2016agent} and we argue it is important to account for the diversity of urban configurations when disseminating the results of any model in the planning community.
+
+we think that the method could (and should) be applied to larger models including domain mechanisms and more empirical initialisation data, for example synthetic populations. The sensitivity analysis to initial spatial conditions could then be either a replication on the spatial allocation of the synthetic population, or a series of spatial permutations of the empirical spatial inputs.
 We want to foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow and the model implementation. They are available on the open repository of the project at \url{https://github.com/AnonymousAuthor2/SpaceMatters}. Future work could be done to compare these or generate grids with a larger morphological span, covering other typical urban forms that can be found in the world.
 
 Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents, transportation networks generators \citep{raimbault2018multi}, or coupled road network and population raster generators \citep{raimbault2019urban}. The particular density grid generator we used here is an example among possible others, and our methodological contribution is generic as it does not depend on which generator is chosen.  
@@ -453,14 +461,12 @@ Another way to go would be to implement additional generators, such as social ne
 
 As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions. Geography and the social sciences in general have been strongly influenced by physics in the last decades, that beside their highly enriching impact~\citep{o2015physicists}, may have softly imposed strong assumptions such as homogeneity and isotropy of space in basic models. We believe that a renewed approach on the role of space as we proposed, in other terms insisting that \emph{space matters}, is an opportunity the for social sciences to build their own stream of methodologies in the modelling domain.
 
-This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. In our case, a contribution in the modeling domain aiming at extracting further knowledge on model behavior (sensitivity to geometrical context), naturally leads to questioning theoretical concepts and empirical definition on which the model was based, such as for example the meaning of neighborhood.
+This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. In our case, a contribution in the modeling domain aiming at extracting further knowledge on model behavior (sensitivity to geometrical context), may lead to questioning theoretical concepts and empirical definition on which the model was based, such as for example the meaning of neighborhood, hence geometry of space!
+
 % to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in conclusion, discussing how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how ’neighbourhood’ is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences)
 
 
 
-\section{Conclusion}
-
-After reviewing the extensive literature on spatial biases in statistical and simulation models, we presented a method to analyse the sensitivity of a simulation's results to the initial spatial configuration. We did so by implementing a spatial generator whose output is used as input for the simulation model. We applied this approach to two textbook ABMs: Schelling and Sugarscape. With the Schelling experiment, we found that the different urban morphologies impact the interaction patterns, and that polycentric and discontinuous cities appear systematically more segregated than compact cities in terms of dissimilarity and entropy index. With Sugarscape, we show that the model is more sensitive to space than to its other parameters in the reference Netlogo implementation, both qualitatively and quantitatively: the amplitude of variations across density grids is larger than the amplitude in each phase diagram, and the behaviour of the phase diagram is qualitatively different in different regions of the morphological space. We think that this method has the potential to increase the arsenal of evaluation of socio-spatial models, in order to assess the sensitivity of models to their initial spatial conditions but also to learn about the impact of the urban form on social mechanisms.
 
 %%%%%%%%%%%%%
 % Acknowledgements
