--- a/spacematters.bib
+++ b/spacematters.bib
@@ -8,7 +8,34 @@
   year={2016},
   publisher={Springer}
 }
-
+@article{sun2007traffic,
+  title={A traffic cellular automata model based on road network grids and its spatial and temporal resolution’s influences on simulation},
+  author={Sun, Tengda and Wang, Jinfeng},
+  journal={Simulation Modelling Practice and Theory},
+  volume={15},
+  number={7},
+  pages={864--878},
+  year={2007},
+  publisher={Elsevier}
+}
+@article{lilburne2009sensitivity,
+  title={Sensitivity analysis of spatial models},
+  author={Lilburne, Linda and Tarantola, Stefano},
+  journal={International Journal of Geographical Information Science},
+  volume={23},
+  number={2},
+  pages={151--168},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{perez2016agent,
+  title={Agent-based modelling for urban planning current limitations and future trends},
+  author={Perez, Pascal and Banos, Arnaud and Pettit, Chris},
+  booktitle={International Workshop on Agent Based Modelling of Urban Systems},
+  pages={60--69},
+  year={2016},
+  organization={Springer}
+}
 @article{AllenSanglier1979,
 	title = {A dynamic model of growth in a central place system},
 	volume = {11},
