--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -90,7 +90,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
  \begin{itemize}
  
-  \item B.1. We have added a discussion of\comment[FL]{on?} how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
+  \item B.1. We have added a discussion on how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
   
   \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
   
@@ -197,7 +197,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
  
   \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }
   %\comment[FL]{j'ai pas compris pourquoi la phrase du reviewer avait été mise en commentaire, j'ai remis}
- %\comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FK]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
+ %\comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FL]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
  
   $\rightarrow$ We understand this statement, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we aimed at showing what kind of results could be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results \comment[FL]{à la relecture de l'article s'assurer que cette prise de recul est bien explicitée}
   
