--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,5 +1,74 @@
 % I've organized the ref list through alphabetic order to have a better view on it
 
+@inproceedings{coupe2017modeliser,
+  title={Mod{\'e}liser les migrations et la colonisation de nouveaux territoires par les homo sapiens},
+  author={Coup{\'e}, Christophe and Hombert, Jean-Marie and Le N{\'e}chet, Florent and Mathian, H{\'e}l{\`e}ne and Sanders, Lena},
+  year={2017},
+  booktitle={Peupler la Terre, Sanders, L., ed. PUFR.}
+}
+
+@article{rybski2013distance,
+  title={Distance-weighted city growth},
+  author={Rybski, Diego and Ros, Anselmo Garcia Cantu and Kropp, J{\"u}rgen P},
+  journal={Physical Review E},
+  volume={87},
+  number={4},
+  pages={042114},
+  year={2013},
+  publisher={APS}
+}
+
+@article{herold2003spatiotemporal,
+  title={The spatiotemporal form of urban growth: measurement, analysis and modeling},
+  author={Herold, Martin and Goldstein, Noah C and Clarke, Keith C},
+  journal={Remote sensing of Environment},
+  volume={86},
+  number={3},
+  pages={286--302},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{anas1998urban,
+  title={Urban spatial structure},
+  author={Anas, Alex and Arnott, Richard and Small, Kenneth A},
+  journal={Journal of economic literature},
+  volume={36},
+  number={3},
+  pages={1426--1464},
+  year={1998},
+  publisher={JSTOR}
+}
+
+@inproceedings{vecchiola2009high,
+  title={High-performance cloud computing: A view of scientific applications},
+  author={Vecchiola, Christian and Pandey, Suraj and Buyya, Rajkumar},
+  booktitle={2009 10th International Symposium on Pervasive Systems, Algorithms, and Networks},
+  pages={4--16},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{bakker2016scripting,
+  title={Scripting MODFLOW model development using Python and FloPy},
+  author={Bakker, Mark and Post, V.+ and Langevin, Christian D and Hughes, Joseph D and White, JT and Starn, JJ and Fienen, Michael N},
+  journal={Groundwater},
+  volume={54},
+  number={5},
+  pages={733--739},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+@inproceedings{tisue2004netlogo,
+  title={Netlogo: A simple environment for modeling complexity},
+  author={Tisue, Seth and Wilensky, Uri},
+  booktitle={International conference on complex systems},
+  volume={21},
+  pages={16--21},
+  year={2004},
+  organization={Boston, MA}
+}
+
 @article{alizadeh2016generating,
   title={Generating and analyzing spatial social networks},
   author={Alizadeh, Meysam and Cioffi-Revilla, Claudio and Crooks, Andrew},
