--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -77,10 +77,9 @@ We want to thank the two reviewers for their thorough evaluation and discussion 
  \medskip
 A. In terms of the ambiguity between the social and spatial component 
 \begin{itemize}
-\item A.1. We have precised and clarified the argument of the paper (mainly in introduction) by qualifying our contribution, which is to provide an operational framework for studying the influence of geometric structures of space on the results of a geosimulation model. We have thus distinguished two effects of geographical space in simulation modelling: the ones that are part of the model, reflecting for example the role played by distance on decreasing agents' perception or potential social interactions; and the ones which act as geometric structures "on which" the social elements simulated interact, i.e. geometric constraints of the simulation. The first type of effects is addressed by traditional modelling. Our original contribution is to tackle the second type. %\comment[CC]{done in 1.5 and 1.8}
+\item A.1. We have precised and clarified the argument of the paper (mainly in introduction) by qualifying our contribution, which is to provide an operational framework for studying the influence of geometric structures of space on the results of a geosimulation model. We have thus distinguished two effects of geographical space in simulation modelling: the ones that are part of the model, reflecting for example the role played by distance on decreasing agents' perception or potential social interactions; and the ones which act as geometric structures "on which" the social elements simulated interact, i.e. geometric constraints of the simulation. The first type of effects is addressed by traditional modelling. Our original contribution is to tackle the second type.
  
-\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space)%. This term refers to empirical systems, which are the targets of the modelling process)% Mise en commentaire par FL 190812 : je trouve que cela alourdi inutilement la phrase
-, \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we use for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because it generates a square grid with heterogeneous density, whereas in all generality a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5} %Changement par FL 190812 Because this is the only geometric structure it generates
+\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space), \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we use for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because it generates a square grid with heterogeneous density, whereas in all generality a "spatial generator" could potentially generate graph or point structures.
 
  \item A.3. We have modified figure 1 to express the clarified approach visually. Naming the generator parameter "gamma" has helped reduced the confusion that the term 'meta-parameter' was inducing. We have also replaced the expressions "quantitative results" by "sensitivity analysis" and "qualitative results" by "variations by types of geometric structure", in the figure as in the subsections of the paper.
 \end{itemize}
@@ -90,23 +89,16 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
  \begin{itemize}
  
-  \item B.1. We have added a discussion of\comment[FL]{on?} how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
+  \item B.1. We have added a discussion of on how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research.
   
-  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
+  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences).
   
-  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper)\comment[FL]{pas clair : pour calculer les indicateurs? pour les interactions? à préciser comment sont utilisés ces ego neighborhoods}. We could also\comment[FL]{plutôt : In further researches, we plan to extend the analysis...} in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks). % \comment{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.1}
+  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid, and make these systematically vary and study the effect on emergent behavior and indicators. In further researches, we plan to extend the analysis to vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks).
 \end{itemize}
 
 \bigskip
 
-%\textbf{to do list:}
 
- % \textbf{Sociospatial system} pour parler des systèmes empiriques, \textbf{interactions} pour parler de ce qui se passe dans le modele,  \textbf{geometric structures} pour parler des outputs issus du générateur et  parler de \textbf{density grid generator} quand on développe le nôtre. \comment{done}
- 
- % caser" Jessop (2008) points in particular to the interdependence between social phenomena and the spatial environment where they take place. We model the social system as the interaction dynamics of agents and spatial units. The spatial generator produces the geometric support for these interactions." in intro 1.4 \\ \comment[MLT]{To avoid redundancies, I have simply added the reference to Jessop when we describe Figure 1.}
-  
-  
-%We now turn to point-by-point responses to referees comments.
 \medskip
 \textbf{Point-by-point response to referees comments:}
 
@@ -146,22 +138,16 @@ B. To highlight limitations as well as promising perspectives of improvement, we
    
    $\rightarrow$ We have clarified the semantic terms used in sections 1.5 to 1.8 and in the figure 1.
    
-   %\comment[JR]{most of this empirical literature was added because of one CEUS reviewer, no ?}\comment[MLT]{If we want to keep this part to please everyone (like our former reviewer), we could explicitly mention that we model the growth of a city (in terms of population density) which is the results of a bunch of dynamics ... and not the dynamics themselves?}
-  %\comment[FLN]{ qui montre que la démarche méta est ici appliquée à un domaine empirique qu'il aide à explorer mais d'autres domaines peuvent s'emparer de la démarche méta.}
  
-   % show disagreement with omitting empirical/geographical but demonstrate helps understand geographical question but the is generic and valuable for it.
 
 \medskip
 
   \item \textit{The problem, from a geographical point of view, is that the paper switches between “geographical” and “spatial” without making any differentiation. In so doing, the author(s) runs immediately into the problem of adequate definitions. In paragraph 1.2 the definition of geographical systems as “social agents interacting with one another, within a limited portion of space” is misleading. First, it is a tautology (geographical systems in space); secondly, geographical cannot be described with social agents, because geographical systems are composed of spatial units, their relations, and a spatially defined system border. Social systems, in turn, might be described with humans as elements, their relations, and again a socially defined system border. Moreover, with respect to sociological system theory (Luhmann 1993), space does not add any knowledge to the nature of social systems. This approach can be (and I would add: has to be) criticised, however, not by interming! ling fuzzily the social with the geographical, as happened with this definition.} 
-  %\item \comment[JR]{by spatial we indeed mean some kind of spatial container for agents right ? which is far from geographical in the sense he puts it indeed}\comment[MLT]{use sociospatial system instead? The term is broadly used in the literature to describe the interdependence between social phenomena and their spatial environment. We could also quote \hyperlink{https://journals.sagepub.com/doi/abs/10.1068/d9107}{Jessop et al. 2008}}
-  
+ 
  $\rightarrow$ This issue is tackled by comment A.
  
  \medskip
 
-  %\item reprendre tout le papier pour éliminer les termes indéfinis "space", "pattern" etc. + en conclu mentionner que ça s'applique aux automates cellulaires (sans agents) et aux modèles écologiques (agents-arbres).
-  %\item in conclusion, we need to clarify the answer to the question "do geometric structure influence sociospatial systems dynamics" by saying it depends on the model. ≠ black\&white and we can demonstrate it. The nature of social systems is a given (in the model mu, which is not the contribution of this paper) and we explore the consequence of geometric structures on the spatial expression of social systems.
   
 
   \item \textit{Then, in paragraph 1.3, the complexity of systems with respect to segregation is also problematically described.} \ldots
@@ -171,9 +157,8 @@ B. To highlight limitations as well as promising perspectives of improvement, we
 
   \medskip
 
-  \textit{The problem of setting space and geography as synonymous continues in paragraphs 1.9 and following. What is described here as "spatial system shape" is the geometry of spaces but not the geography of spaces.}
-  % -> yes indeed
-  
+  \item \textit{The problem of setting space and geography as synonymous continues in paragraphs 1.9 and following. What is described here as "spatial system shape" is the geometry of spaces but not the geography of spaces.}
+
   $\rightarrow$ We agree and corrected the semantics (see comment A). 
 
   \medskip
@@ -187,27 +172,26 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \item \textit{Due to this, attempts to explain the growth of existing cities should be avoided.}
   
   $\rightarrow$ We agree with this comment and recall that urban growth processes are not the main focus of the paper, they are here an instantiation of a given $\gamma$ generator, which could have been replaced by others such as network models, procedural modeling, etc. The position and discussion of the paper was amended to precise that (see comment A).
-  
-  %it's not the point of the paper, only the metaphore of the spatial generator. + supprimer la ref à "urban growth" dans le texte et dire d'inspiration urban science mais dont seules les grilles finales nous intéressent. On aurait pu utiliser des generator issus de graphes, de percolation etc.
-  %The core of the paper is not this, it's the approach of including gamma and applying to mu to understand systems better, whatever gamma and whatever mu in whatever knowledge domain.
-  %\item in discussion, mention that it's one isolated example of geometry but other cases could be thought of as well, using networks and graphs, but also empirical shape files.
+
  
   \medskip
  
  
   \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }
-  %\comment[FL]{j'ai pas compris pourquoi la phrase du reviewer avait été mise en commentaire, j'ai remis}
- %\comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FK]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
+  
  
-  $\rightarrow$ We understand this statement, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we aimed at showing what kind of results could be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results \comment[FL]{à la relecture de l'article s'assurer que cette prise de recul est bien explicitée}
-  
-  \comment[FL]{ne pas oublier les trois points ci-dessous!!!}
-  \item in discussion, say that indeed the indicators can themselves be influenced by geometric structures (cf. comment B) but on the processes, there is nothing obvious about the influence of structures on behavioural spatial patterns (if you imagine a model with no interactions between agents for example) + it's a difference between the model and its potential addition to the real systems. cf. B
-  
-  \item rewrite 1.11 \& 1.12 which is misleading
+  $\rightarrow$ We understand this statement, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we aimed at showing what kind of results could be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results.
 
-   % Formal issues that have to be solved: the numbering of paragraphs is not coherent. The reference of Wheeler (2006) is missing the source of the article.
-    \item check jasss style for paragraph numbering (Tous)
+
+   
+ % \comment{in discussion, say that indeed the indicators can themselves be influenced by geometric structures (cf. comment B) but on the processes, there is nothing obvious about the influence of structures on behavioural spatial patterns (if you imagine a model with no interactions between agents for example) + it's a difference between the model and its potential addition to the real systems. cf. B}
+  
+
+	\medskip
+
+   \item \textit{Formal issues that have to be solved: the numbering of paragraphs is not coherent. The reference of Wheeler (2006) is missing the source of the article.}
+   
+   $\rightarrow$ These issues were corrected.
  
 
 \end{enumerate}
